# cardgame

./: cardgame.cabal
