name:                cardgame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cardgame#readme
license:             BSD3
license-file:        LICENSE
author:              Brant Abeln
maintainer:          baabeln@ucdavis.edu
copyright:           2022 Brant Abeln
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cardgame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
